# gops

./: .gitignore  CMakeLists.txt  README.md  clops64.bat
src/: main.cpp  mincl.hpp
